--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 Выбор даты
 <input type="time" tabindex="2">
 Выбор време"ни
-<input type="month" tabindex="">
+<input type="month" tabindex="3">
 Выбор месяца года
 <input type="week" tabindex="4">
 Выбор недели месяца
