--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <input type="month" tabindex="3">
 Выбор месяца года
 <input type="week" tabindex="4">
-Выбор недели месяца
+Оброзование
   
   
 <select name="icecream" size="7" multiple> 
