--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
   
   
 <select name="icecream" size="7" multiple> 
-<optgroup label="Традиционные">
-<option selected="selected">>Молочное</option>
-<option disabled>Шоколадное</option>
+<optgroup label="Среднее образование">
+<option selected="selected">>Школа</option>
+<option disabled>Гимназия</option>
+  <option selected="selected">>Лицей</option>
 </optgroup>
 <optgroup label="Вкусы дня">
 <option>Cynep пpaлинe</option> 
