--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
 <select name="icecream" size="7" multiple> 
 <optgroup label="Среднее образование">
 <option selected="selected">>Школа</option>
-<option disabled>Гимназия</option>
+ <option selected="selected">>Гимназия</option>
   <option selected="selected">>Лицей</option>
 </optgroup>
-<optgroup label="Вкусы дня">
-<option>Cynep пpaлинe</option> 
-<option selected="selected">>Opexoвый сюрприз</option> 
-<option>Малиновое</option>
+<optgroup label="Высшее образование">
+<option>Институт</option> 
+<option selected="selected">>Университет</option> 
 </optgroup>
 </select>
   
