--- a/index.html
+++ b/index.html
@@ -1,35 +1,15 @@
 <!DOCTYPE html>
+<html lang="ru">
 <html>
   <head>
-  <link rel="stylesheet" type="text/css" href="style.css">
+ <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Анимация</title>
+    <link rel="stylesheet" href="styles.css">
     <head>
   <body>
-    /* styles.css */
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-    background-color: #f0f0f0;
-}
-
-.animation-box {
-    width: 50px;
-    height: 50px;
-    background-color: #3498db;
-    position: relative;
-    animation: move 2s infinite alternate;
-}
-
-@keyframes move {
-    from {
-        transform: translateX(0);
-    }
-    to {
-        transform: translateX(300px);
-    }
-}
+   <div class="animation-box"></div>
+    <script src="script.js"></script>
 <input type="date" tabindex="1">
 Выбор даты
 <input type="time" tabindex="2">
@@ -120,4 +100,5 @@ value="no"> </label></li>
   <input type="submit"><input type="reset">
   </fieldset></р>
   
-  </body></html>
+  </body>
+</html>
