--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Анимация</title>
     <link rel="stylesheet" href="styles.css">
-    <head>
+  </head>
   <body>
    <div class="animation-box"></div>
     <script src="script.js"></script>
