--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-   <div class="animation-box"></div>
-    <script src="script.js"></script>
+   <div class="animation">
+    Squad Busters </div>
     
 <input type="date" tabindex="1">
 Выбор даты
